syntax = "proto3";
package MCServer;
//实验信息
message ExperimentInfo{
	string own=1;	//所属项目
	string name=2;	//实验名称
	int32 id=3;	//实验编号
	bool isBack=4;	//是否执行返回命令
}



